--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,6 +2,7 @@
 header {
     box-shadow: 0 0 0.5rem 0 c.$orange;
     flex-wrap: wrap;
+    margin-bottom: 2rem;
     position: relative;
     width: 100vw;
     >.flex {
