--- a/css/_base.scss
+++ b/css/_base.scss
@@ -23,6 +23,10 @@ section {
     padding: 2rem 0;
 }
 
+.only-lg-screen {
+    display: none;
+}
+
 // Typography
 h1 {
     font-family: 'EB Garamond', serif;
@@ -50,10 +54,18 @@ h3:not(.tile-title) {
     text-align: center;
 }
 
+h4 {
+    font-size: 1.8rem;
+}
+
 p {
     margin-bottom: 1.5rem;
     &:last-of-type {
         margin-bottom: 0;
+    }
+    &.note {
+        font-size: 1.2rem;
+        margin-top: 0.5rem;
     }
 }
 
@@ -84,9 +96,13 @@ a {
             border-top: none;
             border-radius: 0 0 0.5rem 0.5rem;
             flex-wrap: wrap;
-            gap: 1.2rem;
+            gap: 1.5rem;
             justify-content: center;
             padding: 2rem;
+        }
+        img {
+            height: 4.5rem;
+            width: 4.5rem;
         }
     }
 }
@@ -118,6 +134,12 @@ a {
     }
     p:last-of-type {
         margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .only-lg-screen {
+        display: block;
     }
 }
 
