--- a/css/_personal-projects.scss
+++ b/css/_personal-projects.scss
@@ -1,13 +1,13 @@
 @use 'colors' as c;
 .projects {
     .quote {
-        margin-bottom: 1rem;
+        margin: 3rem auto 5rem;
     }
     .flex {
         align-items: baseline;
         border: 0.1rem solid c.$orange;
         border-top: none;
-        gap: 3rem;
+        gap: 4rem;
         overflow-x: scroll;
         padding: 2rem;
         &::-webkit-scrollbar {
@@ -25,8 +25,11 @@
             flex-basis: 4.5rem;
         }
         img {
-            margin: 0 0 1rem;
-            width: 100%;
+            height: 7rem;
+            margin: 0 auto 1rem;
+            object-fit: cover;
+            padding-left: 0.2rem;
+            width: 7rem;
             &.enlarge {
                 height: auto;
                 left: 50%;
@@ -34,12 +37,21 @@
                 top: 50%;
                 transform: scale(1);
                 transform: translate(-50%, -50%);
-                z-index: 1;
                 width: auto;
+                z-index: 1;
             }
         }
         .caption {
+            font-style: normal;
+            margin-bottom: 0;
             min-width: 7rem;
+        }
+        .description {
+            font-size: 1.4rem;
+            font-style: italic;
+            padding-top: 0.5rem;
+            text-align: center;
+            white-space: nowrap;
         }
     }
     .picture {
@@ -50,13 +62,10 @@
         .title-note {
             color: #fff;
             font-size: 1.4rem;
+            font-style: italic;
             position: absolute;
             right: 5%;
             top: 6%;
-        }
-        img {
-            height: auto;
-            width: 100%;
         }
     }
 }
