--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ a:hover {
   font-style: italic;
   padding-top: 0.5rem;
   text-align: center;
+  white-space: nowrap;
 }
 
 .decoration {
@@ -713,13 +714,13 @@ nav a.current {
   }
 }
 .projects .quote {
-  margin-bottom: 1rem;
+  margin: 3rem auto 5rem;
 }
 .projects .flex {
   align-items: baseline;
   border: 0.1rem solid #ff7700;
   border-top: none;
-  gap: 3rem;
+  gap: 4rem;
   overflow-x: scroll;
   padding: 2rem;
 }
@@ -738,8 +739,12 @@ nav a.current {
   flex-basis: 4.5rem;
 }
 .projects .flex img {
-  margin: 0 0 1rem;
-  width: 100%;
+  height: 7rem;
+  margin: 0 auto 1rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  padding-left: 0.2rem;
+  width: 7rem;
 }
 .projects .flex img.enlarge {
   height: auto;
@@ -748,11 +753,20 @@ nav a.current {
   top: 50%;
   transform: scale(1);
   transform: translate(-50%, -50%);
-  z-index: 1;
   width: auto;
+  z-index: 1;
 }
 .projects .flex .caption {
+  font-style: normal;
+  margin-bottom: 0;
   min-width: 7rem;
+}
+.projects .flex .description {
+  font-size: 1.4rem;
+  font-style: italic;
+  padding-top: 0.5rem;
+  text-align: center;
+  white-space: nowrap;
 }
 .projects .picture {
   margin: 1.5rem auto;
@@ -763,13 +777,10 @@ nav a.current {
 .projects .tile .title-note {
   color: #fff;
   font-size: 1.4rem;
+  font-style: italic;
   position: absolute;
   right: 5%;
   top: 6%;
-}
-.projects .tile img {
-  height: auto;
-  width: 100%;
 }
 
 footer {
