--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -17,8 +17,7 @@
             left: 1.5rem;
         }
         p {
-            text-decoration: underline;
-            text-underline-offset: 0.5rem;
+            color: #000;
         }
     }
 }
