--- a/css/_base.scss
+++ b/css/_base.scss
@@ -11,7 +11,6 @@ body {
 
 main {
     background-color: white;
-    // margin-top: 2rem;
 }
 
 .flex {
@@ -57,6 +56,20 @@ h3:not(.tile-title) {
     font-size: 2.4rem;
     margin-bottom: 3rem;
     text-align: center;
+}
+
+h3.lined {
+    align-items: center;
+    display: flex;
+    margin: 0 auto 3rem;
+    width: 80%;
+    &::before,
+    &::after {
+        content: '';
+        border-top: 0.1rem solid c.$yellow;
+        margin: 0 2rem;
+        flex-grow: 1;
+    }
 }
 
 h4 {
