--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,19 @@ h3:not(.tile-title) {
   text-align: center;
 }
 
+h3.lined {
+  align-items: center;
+  display: flex;
+  margin: 0 auto 3rem;
+  width: 80%;
+}
+h3.lined::before, h3.lined::after {
+  content: "";
+  border-top: 0.1rem solid #fec71e;
+  margin: 0 2rem;
+  flex-grow: 1;
+}
+
 h4 {
   font-size: 1.8rem;
 }
@@ -282,6 +295,7 @@ header > .flex {
 
 .logo {
   color: #000;
+  cursor: pointer;
 }
 .logo img {
   margin-right: 1.5rem;
@@ -289,6 +303,9 @@ header > .flex {
 .logo span {
   display: block;
   font-size: 2rem;
+}
+.logo:hover {
+  color: #ff7700;
 }
 
 .menu-icon {
@@ -316,6 +333,12 @@ nav ul {
 }
 nav li {
   padding: 1rem 2rem;
+}
+nav li > ul.dropdown-menu {
+  margin-top: 1rem;
+}
+nav li > ul.dropdown-menu > li:last-of-type {
+  padding-bottom: 0;
 }
 nav a {
   display: flex;
@@ -380,7 +403,7 @@ nav a.current {
     opacity: 0;
     overflow: hidden;
     position: absolute;
-    left: 0;
+    left: 2rem;
     top: 100%;
     transition: opacity 0.3s ease;
     visibility: hidden;
@@ -544,8 +567,7 @@ nav a.current {
   left: 1.5rem;
 }
 .portfolio .tile p {
-  text-decoration: underline;
-  text-underline-offset: 0.5rem;
+  color: #000;
 }
 
 @media screen and (min-width: 1024px) {
@@ -713,10 +735,10 @@ nav a.current {
     flex-basis: auto;
   }
 }
-.projects .quote {
-  margin: 3rem auto 5rem;
+.pq .quote {
+  margin: 3rem auto;
 }
-.projects .flex {
+.pq .flex {
   align-items: baseline;
   border: 0.1rem solid #ff7700;
   border-top: none;
@@ -724,21 +746,21 @@ nav a.current {
   overflow-x: scroll;
   padding: 2rem;
 }
-.projects .flex::-webkit-scrollbar {
+.pq .flex::-webkit-scrollbar {
   width: 1rem;
 }
-.projects .flex::-webkit-scrollbar-track {
+.pq .flex::-webkit-scrollbar-track {
   background-color: #fff;
   box-shadow: inset 0 0 0.2rem rgba(0, 0, 0, 0.3);
 }
-.projects .flex::-webkit-scrollbar-thumb {
+.pq .flex::-webkit-scrollbar-thumb {
   background-color: #ff7700;
   box-shadow: inset 0 0 0.2rem rgba(0, 0, 0, 0.4);
 }
-.projects .flex .gallery-img {
+.pq .flex .gallery-img {
   flex-basis: 4.5rem;
 }
-.projects .flex img {
+.pq .flex img {
   height: 7rem;
   margin: 0 auto 1rem;
   -o-object-fit: cover;
@@ -746,7 +768,7 @@ nav a.current {
   padding-left: 0.2rem;
   width: 7rem;
 }
-.projects .flex img.enlarge {
+.pq .flex img.enlarge {
   height: auto;
   left: 50%;
   position: fixed;
@@ -756,31 +778,162 @@ nav a.current {
   width: auto;
   z-index: 1;
 }
-.projects .flex .caption {
+.pq .flex .caption {
   font-style: normal;
   margin-bottom: 0;
   min-width: 7rem;
 }
-.projects .flex .description {
+.pq .flex .description {
   font-size: 1.4rem;
   font-style: italic;
   padding-top: 0.5rem;
   text-align: center;
   white-space: nowrap;
 }
-.projects .picture {
-  margin: 1.5rem auto;
+.pq .picture {
+  margin: 0 auto 3.5rem;
 }
-.projects .tile {
+.pq aside {
+  font-size: 1.4rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+.pq video {
+  border: 2px solid #fec71e;
+  margin: 0 auto;
+  max-height: 40rem;
+  max-width: 72rem;
+}
+.pq video::-webkit-media-controls-current-time-display, .pq video::-webkit-media-controls-time-remaining-display {
+  color: #ff7700;
+}
+
+@media screen and (min-width: 1024px) {
+  .pq .chunk {
+    align-items: center;
+    display: flex;
+    gap: 3rem;
+  }
+  .pq .chunk .picture {
+    margin-top: 4rem;
+  }
+  .pq .chunk .reorder {
+    order: 1;
+    width: 30rem;
+  }
+  .pq .tiles {
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 94.5rem;
+  }
+  .pq .tiles .tile {
+    width: 45.5rem;
+  }
+}
+.contact p {
+  text-align: center;
+}
+.contact img {
+  margin: 4rem auto 2rem;
+  width: 25rem;
+}
+.contact form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 2.5rem 0 3rem;
+  padding: 0 1rem;
+}
+.contact form fieldset {
+  border: none;
+  margin-top: 1rem;
+  padding: 0;
+  width: 100%;
+}
+.contact form fieldset div {
+  padding-bottom: 2.5rem;
   position: relative;
 }
-.projects .tile .title-note {
-  color: #fff;
-  font-size: 1.4rem;
-  font-style: italic;
+.contact form fieldset div:last-of-type {
+  padding-bottom: 0;
+}
+.contact form fieldset div svg {
+  height: 3.5rem;
+  left: 0;
   position: absolute;
-  right: 5%;
-  top: 6%;
+  top: -0.4rem;
+  width: 3.5rem;
+}
+.contact form fieldset div svg:last-of-type {
+  height: 3rem;
+  left: 0.2rem;
+  top: -0.2rem;
+  width: 3rem;
+}
+.contact form fieldset label {
+  display: block;
+  color: #ff7700;
+  font-size: 2rem;
+  margin: 0 0 1.5rem 4.5rem;
+  margin-bottom: 1.5rem;
+  position: relative;
+}
+.contact form fieldset label::after {
+  color: #ff7700;
+  content: "*";
+  font-size: 3rem;
+  margin-left: 0.3rem;
+  position: absolute;
+  top: -14%;
+}
+.contact form fieldset input,
+.contact form fieldset textarea {
+  border: 0.2rem solid #ff7700;
+  border-radius: 0.5rem;
+  margin: 0 0 2.5rem;
+  padding: 1.5rem;
+  width: 100%;
+}
+.contact form fieldset input:focus,
+.contact form fieldset textarea:focus {
+  border-color: #fec71e;
+}
+.contact form fieldset input:not(:-moz-placeholder-shown):invalid, .contact form fieldset textarea:not(:-moz-placeholder-shown):invalid {
+  background: #fae6e6;
+}
+.contact form fieldset input:not(:-ms-input-placeholder):invalid, .contact form fieldset textarea:not(:-ms-input-placeholder):invalid {
+  background: #fae6e6;
+}
+.contact form fieldset input:not(:placeholder-shown):invalid,
+.contact form fieldset textarea:not(:placeholder-shown):invalid {
+  background: #fae6e6;
+}
+.contact form fieldset input:not(:-moz-placeholder-shown):valid, .contact form fieldset textarea:not(:-moz-placeholder-shown):valid {
+  background: #e9f0dd;
+}
+.contact form fieldset input:not(:-ms-input-placeholder):valid, .contact form fieldset textarea:not(:-ms-input-placeholder):valid {
+  background: #e9f0dd;
+}
+.contact form fieldset input:not(:placeholder-shown):valid,
+.contact form fieldset textarea:not(:placeholder-shown):valid {
+  background: #e9f0dd;
+}
+.contact form fieldset textarea {
+  margin-bottom: 3rem;
+  resize: none;
+}
+.contact form input[type=submit] {
+  background-color: #ff7700;
+  border-color: #fec71e;
+  border-style: outset;
+  border-radius: 0.8rem;
+  color: #fff;
+  cursor: pointer;
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  padding: 1rem;
+  width: 22.5rem;
 }
 
 footer {
