--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -11,7 +11,8 @@
         align-items: center;
         display: flex;
         flex-direction: column;
-        margin: 2.5rem 0 3rem;
+        margin: 2.5rem auto 3rem;
+        max-width: 62rem;
         padding: 0 1rem;
         fieldset {
             border: none;
