--- a/css/styles.css
+++ b/css/styles.css
@@ -840,7 +840,8 @@ nav a.current {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin: 2.5rem 0 3rem;
+  margin: 2.5rem auto 3rem;
+  max-width: 62rem;
   padding: 0 1rem;
 }
 .contact form fieldset {
