Fixed json files

--- a/css/_artwork.scss
+++ b/css/_artwork.scss
@@ -1,4 +1,8 @@
 .artwork {
+    p {
+        margin-bottom: 2rem;
+        text-align: center;
+    }
     .images {
         flex-wrap: wrap;
         gap: 2.5rem;
