--- a/css/_games.scss
+++ b/css/_games.scss
@@ -2,7 +2,9 @@
 .games {
     .tiles {
         background-color: c.$lt-yellow;
-        padding: 3rem;
+        // padding: 3rem;
+        padding: 2rem;
+        // width: 100%;
     }
     .game-tile {
         margin: 0 auto;
