--- a/css/_about.scss
+++ b/css/_about.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     img {
-        height: 4.5rem;
         width: 4.5rem;
     }
     .tiles {
@@ -26,21 +25,15 @@
             margin-bottom: 0;
         }
     }
+    .divider {
+        margin-bottom: 1.75rem;
+    }
     .resume-link {
         align-items: center;
         display: flex;
         flex-direction: column;
         img {
-            margin: 0 auto 1rem;
-        }
-    }
-    .back-to-top {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        img {
-            height: 7rem;
-            margin: 0 auto 1rem;
+            margin: 0 auto 1.5rem;
         }
     }
 }
@@ -73,7 +66,7 @@
         }
         .info {
             display: flex;
-            gap: 5rem;
+            gap: 6rem;
             position: relative;
             &>.divider {
                 display: none;
@@ -81,15 +74,12 @@
             &::after {
                 background-color: c.$yellow;
                 content: '';
-                height: 98%;
-                left: 28.5rem;
+                height: 97%;
+                left: 28.9rem;
                 position: absolute;
-                top: 0;
+                top: 2rem;
                 width: 0.1rem;
             }
-        }
-        .back-to-top {
-            display: none;
         }
     }
 }
