--- a/css/_header.scss
+++ b/css/_header.scss
@@ -7,18 +7,22 @@ header {
     width: 100vw;
     >.flex {
         justify-content: space-between;
+        max-width: 100rem;
     }
 }
 
 .logo {
     color: #000;
     cursor: pointer;
+    margin-right: 1.5rem;
     img {
-        margin-right: 1.5rem;
+        margin-right: 1.2rem;
     }
     span {
         display: block;
         font-size: 2rem;
+        margin-top: 0.5rem;
+        white-space: nowrap;
     }
     &:hover {
         color: c.$orange;
@@ -48,7 +52,7 @@ nav {
         flex-direction: column;
     }
     li {
-        padding: 1rem 2rem;
+        padding: 1rem 1.25rem;
         &>ul.dropdown-menu {
             margin-top: 1rem;
             &>li:last-of-type {
@@ -88,7 +92,7 @@ nav {
     .logo {
         flex-basis: 40%;
         img {
-            margin-right: 2rem;
+            margin-right: 1.25rem;
         }
     }
     nav {
@@ -118,6 +122,7 @@ nav {
             z-index: 1;
         }
         li {
+            // max-width: 55rem;
             &:hover {
                 &>ul.dropdown-menu {
                     opacity: 1;
@@ -130,5 +135,19 @@ nav {
                 padding-bottom: 1rem;
             }
         }
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .logo {
+        img {
+            margin-right: 3rem;
+        }
+        span {
+            font-size: 2rem;
+        }
+    }
+    nav li {
+        padding: 1rem 1.75rem;
     }
 }
